--- a/index.html
+++ b/index.html
@@ -560,11 +560,11 @@
                                   font-size: 20px;
                                 "
                               >
-                                JABM are professional industrial
-                                equipment’s and services provider for
-                                Automation, Process Control, Instrumentation,
-                                Electrical &amp; strong market and technical
-                                solutions provider.</span
+                                JABM are professional industrial equipment’s and
+                                services provider for Automation, Process
+                                Control, Lighting Control, Electrical &amp;
+                                strong market and technical solutions
+                                provider.</span
                               >
                             </div>
                           </div>
@@ -1358,13 +1358,13 @@
                   <div class="clear"></div>
                 </div>
                 <p class="m-b30">
-                  JABM are professional industrial equipment’s
-                  and services provider for Automation, Process Control,
-                  Instrumentation, Electrical &amp; strong market and technical
-                  solutions provider. Our uncompromising focus on quality,
-                  reliability and innovation allows us to help our customers
-                  create a more sustainable world by delivering smart and energy
-                  efficient products, services and solutions.
+                  JABM are professional industrial equipment’s and services
+                  provider for Automation, Process Control, Lighting Control,
+                  Electrical &amp; strong market and technical solutions
+                  provider. Our uncompromising focus on quality, reliability and
+                  innovation allows us to help our customers create a more
+                  sustainable world by delivering smart and energy efficient
+                  products, services and solutions.
                 </p>
                 <div class="row">
                   <div class="col-md-12 col-lg-12 col-sm-12 m-b15">
@@ -1414,7 +1414,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Solar System Installation
+                          Fit Out (Design & Installation) Works
                         </h4>
                       </div>
                     </div>
@@ -1432,42 +1432,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          MEP (Mechanical, Electrical and Plumbing) works
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">HVAC</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          Power Cable Laying, Glanding & Termination and wall
-                          Cutting
+                          Electrical (Design & Installation) Work
                         </h4>
                       </div>
                     </div>
@@ -1485,7 +1450,27 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Any type of Containment installation Cutting
+                          Lighting Control (Design , Supply & Installation)
+                          System
+                        </h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
+                  <div class="dlab-box">
+                    <div class="dlab-media">
+                      <img
+                        src="uploads/drive-automation.jpg"
+                        alt=""
+                        style="height: 275px"
+                      />
+                    </div>
+                    <div class="dlab-info p-a20 text-center bg-gray">
+                      <div class="p-lr20">
+                        <h4 class="m-a0 bg-primary service-head">
+                          Flood Lights (Design & Installation) Works
                         </h4>
                       </div>
                     </div>
@@ -1503,9 +1488,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Load Banks Sale (Authorized Agent of US Based Company
-                          LBD for MENA Region including Pakistan and
-                          Afghanistan)
+                          Automation (Design & Installation) Work
                         </h4>
                       </div>
                     </div>
@@ -1523,8 +1506,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Design Assembly/ Installation Control Panel/LCP/ATS
-                          Panel/Syn Panel/Power panel & etc.
+                          Home Automation Work
                         </h4>
                       </div>
                     </div>
@@ -1542,7 +1524,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Electrical Items Supply
+                          Street Lights (Design & Installation)
                         </h4>
                       </div>
                     </div>
@@ -1560,44 +1542,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          LED Lights Supply & Installation
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          Design & supply Home Automation (SMART switch &
-                          socket)
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          AMC for MEP (Annual maintenance contract)
+                          Solar System (Design & Installation)
                         </h4>
                       </div>
                     </div>
