--- a/services.html
+++ b/services.html
@@ -216,7 +216,7 @@
         </div>
         <div class="section-full bg-img-fix content-inner">
           <div class="container">
-            <h3>JABM - UAE is offering:</h3>
+            <h3>JESR AL AMANAH is offering:</h3>
             <!--<div class="section-head text-center ">
                   <h2 class="text-uppercase">Our Best <span class="text-primary">Services</span></h2>
         <p>There are many variations of passages of Lorem Ipsum typesetting industry has been the industry's standard dummy text ever since the been when an unknown printer.</p>
@@ -235,7 +235,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Solar System Installation
+                          Fit Out (Design & Installation) Works
                         </h4>
                       </div>
                     </div>
@@ -253,42 +253,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          MEP (Mechanical, Electrical and Plumbing) works
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">HVAC</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          Power Cable Laying, Glanding & Termination and wall
-                          Cutting
+                          Electrical (Design & Installation) Work
                         </h4>
                       </div>
                     </div>
@@ -306,7 +271,27 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Any type of Containment installation Cutting
+                          Lighting Control (Design , Supply & Installation)
+                          System
+                        </h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
+                  <div class="dlab-box">
+                    <div class="dlab-media">
+                      <img
+                        src="uploads/drive-automation.jpg"
+                        alt=""
+                        style="height: 275px"
+                      />
+                    </div>
+                    <div class="dlab-info p-a20 text-center bg-gray">
+                      <div class="p-lr20">
+                        <h4 class="m-a0 bg-primary service-head">
+                          Flood Lights (Design & Installation) Works
                         </h4>
                       </div>
                     </div>
@@ -324,9 +309,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Load Banks Sale (Authorized Agent of US Based Company
-                          LBD for MENA Region including Pakistan and
-                          Afghanistan)
+                          Automation (Design & Installation) Work
                         </h4>
                       </div>
                     </div>
@@ -344,8 +327,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Design Assembly/ Installation Control Panel/LCP/ATS
-                          Panel/Syn Panel/Power panel & etc.
+                          Home Automation Work
                         </h4>
                       </div>
                     </div>
@@ -363,7 +345,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          Electrical Items Supply
+                          Street Lights (Design & Installation)
                         </h4>
                       </div>
                     </div>
@@ -381,44 +363,7 @@
                     <div class="dlab-info p-a20 text-center bg-gray">
                       <div class="p-lr20">
                         <h4 class="m-a0 bg-primary service-head">
-                          LED Lights Supply & Installation
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          Design & supply Home Automation (SMART switch &
-                          socket)
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 m-b30">
-                  <div class="dlab-box">
-                    <div class="dlab-media">
-                      <img
-                        src="uploads/drive-automation.jpg"
-                        alt=""
-                        style="height: 275px"
-                      />
-                    </div>
-                    <div class="dlab-info p-a20 text-center bg-gray">
-                      <div class="p-lr20">
-                        <h4 class="m-a0 bg-primary service-head">
-                          AMC for MEP (Annual maintenance contract)
+                          Solar System (Design & Installation)
                         </h4>
                       </div>
                     </div>
