--- a/about-us.html
+++ b/about-us.html
@@ -22,7 +22,7 @@
     <!-- FAVICONS ICON -->
 
     <!-- PAGE TITLE HERE -->
-    <title>Home - aandtengineering</title>
+    <title>About Us - JESR AL AMANAH</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -96,6 +96,13 @@
               <div class="dlab-topbar-left"></div>
               <div class="dlab-topbar-right">
                 <ul class="social-bx list-inline pull-right">
+                  <li>
+                    <a
+                    target="__blank"
+                      href="https://www.instagram.com/jabm2018/"
+                      class="fa fa-instagram"
+                    ></a>
+                  </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-facebook"></a>
                   </li>
