--- a/contact-us.html
+++ b/contact-us.html
@@ -22,7 +22,7 @@
     <!-- FAVICONS ICON -->
 
     <!-- PAGE TITLE HERE -->
-    <title>Home - aandtengineering</title>
+    <title>Contact Us - JESR AL AMANAH</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -96,6 +96,13 @@
               <div class="dlab-topbar-left"></div>
               <div class="dlab-topbar-right">
                 <ul class="social-bx list-inline pull-right">
+                  <li>
+                    <a
+                      target="__blank"
+                      href="https://www.instagram.com/jabm2018/"
+                      class="fa fa-instagram"
+                    ></a>
+                  </li>
                   <li>
                     <a href="javascript:void(0);" class="fa fa-facebook"></a>
                   </li>
@@ -210,9 +217,9 @@
                     to building lasting relationships with our clients.
                     <br /><br />
                     You can contact us through various channels, including
-                    phone, email. Whatever method you choose, rest assured that we
-                    are here to listen, guide, and support you on your journey
-                    towards success. <br /><br />
+                    phone, email. Whatever method you choose, rest assured that
+                    we are here to listen, guide, and support you on your
+                    journey towards success. <br /><br />
                     Join the countless satisfied customers who have already
                     experienced the excellence of our services. Reach out to us
                     today, and let's embark on a remarkable partnership
