made the gallery and project pages

--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                   <li id="contact-us">
                     <a href="contact-us.html">Contact us</a>
                   </li>
+                  <li id="projects">
+                    <a href="projects.html">Our Projects</a>
+                  </li>
+                  <li id="gallery">
+                    <a href="gallery.html">Gallery</a>
+                  </li>
                 </ul>
               </div>
             </div>
